# vguild

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
catalog/agents/: implementer.md  infra-gcp.md  maintainer.md  planner.md  qa.md  release-manager.md  reviewer.md  security.md
catalog/orchestrators/: hotfix.md  infra-change.md  new-feature.md
docs/: architecture.md  deploy.md  development.md  orchestrators.md  prompt-format.md  quality-gates.md
examples/tasks/: feature.md  hotfix.md  infra-change.md
src/vguild/: __init__.py  cli.py  config.py  deploy.py  gating.py  logging_utils.py  models.py  prompt_loader.py  registry.py  run_store.py  sdk_adapter.py
src/vguild/orchestrators/: __init__.py  base.py  hotfix.py  infra_change.py  new_feature.py
tests/: conftest.py  test_cli.py  test_deploy.py  test_documents.py  test_gating.py  test_models.py  test_orchestrator.py  test_prompt_loader.py  test_registry.py  test_run_store.py
